# sysml-language-server

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  errors.txt  todolist.md
.cargo/: config.toml
.cursor/rules/: tool42.mdc
.github/workflows/: ci.yml  release.yml
docs/: BNF_COVERAGE_PLAN.md  DIAGRAM-SUPPORT.md  PACKAGING.md  RELEASE-1.0-PLAN.md  RELEASE-CHECKLIST.md  ROADMAP.md  STATUS-TODO.md  SUPPORTED-WORKFLOWS.md  TROUBLESHOOTING.md  parser-replacement-gap-analysis.md  sysml-parser-semantic-token-spans.md
kerml-parser/: Cargo.toml
kerml-parser/src/: ast.rs  error.rs  grammar.pest  lib.rs  parser.rs  validation_tests.rs
kerml-parser/src/parser/: action.rs  attribute.rs  connection.rs  document.rs  expr.rs  interface.rs  item.rs  member.rs  metadata.rs  mod.rs  package.rs  part.rs  port.rs  requirement.rs  span.rs  state.rs  statements.rs  usecase.rs
server/: Cargo.toml
server/src/: ast_util.rs  dto.rs  ibd.rs  language.rs  main.rs  model.rs  semantic_model.rs  semantic_tokens.rs  sysml_model.rs  util.rs
server/src/language/: keywords.rs  mod.rs  position.rs  symbols.rs
server/src/semantic_model/: graph_builder.rs  mod.rs  relationships.rs
server/src/semantic_tokens/: ast_ranges.rs  lexer.rs  mod.rs  types.rs
server/tests/: lsp_integration.rs  parse_validation.rs
server/tests/fixtures/: parse_clean.sysml
server/tests/integration/: completion.rs  definition.rs  diagnostics.rs  harness.rs  hover.rs  lifecycle.rs  mod.rs  model.rs  references.rs  rename.rs  semantic_tokens.rs  workspace.rs
vscode/: .gitignore  .vscode-test.mjs  .vscode-test.multi-file.mjs  .vscode-test.workspace-smoke.mjs  .vscodeignore  README.md  package-lock.json  package.json  sysml-language-server-0.1.0.vsix  tsconfig.json  tsconfig.webview.json
vscode/media/webview/: visualizer.html  visualizer.js  visualizer.js.map
vscode/scripts/: build-webview.js  copy-webview-assets.js  extract-htmlbuilder.js  extract-inline-script.js  extract-styles.js  fix-htmlbuilder.js  verify-package-layout.js
vscode/snippets/: sysml.json
vscode/src/: extension.ts  graphDump.ts  logger.ts  semanticTokensDump.ts
vscode/src/explorer/: modelExplorerProvider.ts
vscode/src/providers/: lspModelProvider.ts  sysmlModelTypes.ts
vscode/src/types/: sysmlTypes.ts
vscode/src/visualization/: htmlBuilder.ts  messageHandlers.ts  styles.ts  (+4 more)
vscode/syntaxes/: sysml.tmLanguage.json
vscode/testFixture/: SurveillanceDrone.sysml  graph_general_view_dump.json  sample.sysml
(+36 files in other folders)
