[workspace]
resolver = "2"
members = ["server", "kerml-parser"]

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = []
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
