[package]
name = "sysml-language-server"
version = "0.3.0"
edition = "2021"
description = "Language server for SysML v2 (LSP over stdio)"

[[bin]]
name = "sysml-language-server"
path = "src/main.rs"

[dependencies]
kerml-parser = { path = "../kerml-parser" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
petgraph = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
url = "2"
